--- a/index.css
+++ b/index.css
@@ -1,3 +1,166 @@
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
 body {
   font-family: "League Spartan", sans-serif;
+}
+
+.header-container {
+  display: flex;
+  width: 1440px;
+  padding-top: 104px;
+  padding-left: 133px;
+  padding-right: 133px;
+  padding-bottom: 168px;
+  background-color: #f8f8f8;
+}
+
+.header-title {
+  margin-bottom: 53px;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 45px;
+}
+
+.header-subtitle {
+  margin-bottom: 43px;
+  font-size: 250px;
+  line-height: 230px;
+}
+
+.header-description {
+  margin-bottom: 61px;
+  font-size: 32px;
+  line-height: 49px;
+}
+
+.buy-wrapper {
+  display: flex;
+}
+
+.buy-link {
+  display: block;
+  width: 278px;
+  height: 82px;
+  background-color: #161515;
+  color: #ffff;
+  text-decoration: none;
+  font-size: 32px;
+  line-height: 82px;
+  text-align: center;
+}
+.price {
+  display: block;
+  width: 143px;
+  height: 82px;
+  background-color: #ffff;
+  color: #272727;
+  text-decoration: none;
+  font-size: 32px;
+  line-height: 82px;
+  text-align: center;
+  box-shadow: 0px 0px 28px 0px rgba(214, 214, 214, 0.25);
+}
+
+.header-image {
+  display: block;
+  margin: -104px;
+  margin-left: -90px;
+}
+
+.popular-title {
+  margin-top: 43px;
+  text-align: center;
+  font-size: 24px;
+  line-height: 45px;
+  font-weight: 300px;
+}
+.models-title {
+  text-align: center;
+  font-size: 72px;
+  line-height: 81px;
+  font-weight: 400;
+  margin-bottom: 84px;
+}
+
+.item-wrapper {
+  margin: 0 auto;
+  width: 400px;
+  margin-bottom: 85px;
+}
+
+.item-img-wrapper {
+  margin-bottom: 67px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 417px;
+  height: 630px;
+  background-color: #f8f8f8;
+}
+.item-title {
+  font-size: 32px;
+  line-height: 30px;
+  text-align: center;
+  font-weight: 400;
+}
+.item-description {
+  text-align: center;
+  font-size: 32px;
+  line-height: 30px;
+  font-weight: 300;
+}
+
+.product-description-wrapper {
+  margin: 0 auto;
+  width: 410px;
+  margin-bottom: 85px;
+  margin-top: 100px;
+}
+
+.product-description-title {
+  font-size: 32px;
+  line-height: 60px;
+  text-align: center;
+  margin-bottom: 58px;
+  font-weight: 400;
+}
+
+.product-description {
+  text-align: center;
+  font-size: 24px;
+  line-height: 40px;
+  font-weight: 300;
+
+  .link-detail {
+    color: #BB8B5D;
+  }
 }
